# anndata-rs

./: .gitignore  Cargo.toml  GEMINI.md  README.md  USAGE.md  api.html  genindex.html  index.html  install.html  py-modindex.html  release-plz.toml  search.html  searchindex.js
.github/workflows/: ci.yml  release.yml
_autosummary/: anndata_rs.AnnData.X.html  anndata_rs.AnnData.backend.html  anndata_rs.AnnData.chunked_X.html  anndata_rs.AnnData.close.html  anndata_rs.AnnData.copy.html  anndata_rs.AnnData.filename.html  anndata_rs.AnnData.html  anndata_rs.AnnData.is_closed.html  anndata_rs.AnnData.isbacked.html  anndata_rs.AnnData.layers.html  anndata_rs.AnnData.n_obs.html  anndata_rs.AnnData.n_vars.html  anndata_rs.AnnData.obs.html  anndata_rs.AnnData.obs_ix.html  anndata_rs.AnnData.obs_names.html  anndata_rs.AnnData.obsm.html  anndata_rs.AnnData.obsp.html  anndata_rs.AnnData.open.html  anndata_rs.AnnData.shape.html  anndata_rs.AnnData.split_obs_by.html  anndata_rs.AnnData.subset.html  anndata_rs.AnnData.to_memory.html  anndata_rs.AnnData.uns.html  anndata_rs.AnnData.var.html  anndata_rs.AnnData.var_ix.html  anndata_rs.AnnData.var_names.html  anndata_rs.AnnData.varm.html  anndata_rs.AnnData.varp.html  anndata_rs.AnnData.write.html  anndata_rs.AnnDataSet.X.html  anndata_rs.AnnDataSet.adatas.html  anndata_rs.AnnDataSet.backend.html  anndata_rs.AnnDataSet.chunked_X.html  anndata_rs.AnnDataSet.close.html  anndata_rs.AnnDataSet.html  anndata_rs.AnnDataSet.is_closed.html  anndata_rs.AnnDataSet.isbacked.html  anndata_rs.AnnDataSet.n_obs.html  anndata_rs.AnnDataSet.n_vars.html  anndata_rs.AnnDataSet.obs.html  (+16 more)
anndata/: CHANGELOG.md  Cargo.toml  SPRS_MIGRATION_GUIDE.md
anndata-hdf5/: CHANGELOG.md  Cargo.toml  README.md
anndata-hdf5/src/: lib.rs
anndata-test-utils/: CHANGELOG.md  Cargo.toml
anndata-test-utils/proptest-regressions/: lib.txt
anndata-test-utils/src/: lib.rs
anndata-test-utils/src/common/: mod.rs
anndata-test-utils/tests/: sparse_bench.rs  tests.rs
anndata-zarr/: CHANGELOG.md  Cargo.toml  README.md
anndata-zarr/src/: lib.rs
anndata-zarr/test_zarr/group/test/: zarr.json
anndata-zarr/test_zarr/group/test/c/0/: 0  1  2  3  4  5  6
anndata-zarr/test_zarr/group/test/c/1/: 0  1  2  3  4  5  6
anndata-zarr/test_zarr/group/test/c/2/: 0  1  2  3  4  5  6
anndata-zarr/test_zarr/group/test/c/3/: 0  1  2  3  4  5  6
anndata-zarr/test_zarr/group/test/c/4/: 0  1  2  3  4  5  6
anndata-zarr/tests/: sparse_bench.rs
anndata/src/: anndata.rs  backend.rs  concat.rs  data.rs  lib.rs  macros.rs  reader.rs  traits.rs
anndata/src/anndata/: dataset.rs  elem_io.rs
anndata/src/backend/: datatype.rs
pyanndata/: CHANGELOG.md  Cargo.toml  README.md
pyanndata/src/: anndata.rs  config.rs  container.rs  data.rs  lib.rs
python/: CHANGELOG.md  Cargo.toml
python/docs/: index.rst  install.rst
python/src/: lib.rs
python/tests/: test_base.py  test_config.py
(+26 files in other folders)
