[package]
name = "anndata-test-utils"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ndarray = "0.17"
anndata = { version = "0.7.0", path = "../anndata" }
num = "0.4"
tempfile = "3.2"
proptest = "1"
rand = "0.9"
ndarray-rand = "0.16"
nalgebra = { version = "0.34", features = ["rand"] }
nalgebra-sparse = "0.11"
itertools = "0.14"

[dev-dependencies]
anndata-hdf5 = { version = "0.5.3", path = "../anndata-hdf5" }
anndata-zarr = { version = "0.2.0", path = "../anndata-zarr" }
tempfile = "3.2"
proptest = "1"
bincode = { version = "2", features = ["serde"] }
zstd = "0.13"
lz4_flex = "0.11"
rayon = "1.10"

[lints]
workspace = true
