[package]
name = "anndata-zarr"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Kai Zhang <kai@kzhang.org>"]
description = "Zarr backend for the anndata package"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kaizhang/anndata-rs"
homepage = "https://github.com/kaizhang/anndata-rs"

[dependencies]
anndata = { version = "0.7.0", path = "../anndata" }
serde_json = "1.0"
anyhow = "1.0"
ndarray = { version = "0.17", features = ["serde"] }
zarrs = "0.23.10"
smallvec = "1.15"

[dev-dependencies]
tempfile = "3.2"
proptest = "1"
rand = "0.9"
ndarray-rand = "0.16"

[lints]
workspace = true
