[package]
name = "anndata_rs"
version = "0.6.0"
edition = "2021"
authors = ["Kai Zhang <kai@kzhang.org>"]
description = "Rust APIs"
license = "MIT"
repository = "https://github.com/"
homepage = "https://github.com/"
keywords = ["data"]

[dependencies]
pyanndata = { version = "0.7.1", path = "../pyanndata" }
pyo3-log = "0.13"

[dependencies.pyo3]
version = "0.27"
features = ["multiple-pymethods"]

[features]
extension-module = ["pyo3/extension-module", "pyanndata/extension-module"]

[lib]
name = "anndata_rs"
crate-type = ["cdylib"]

[lints]
workspace = true
